# UserCrud---RustApi

./: Cargo.toml  README.md  docker-compose.yaml
migrations/: 0001_users.sql
src/: main.rs
