[package]
name = "user_crud_rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
